# python-petpptx

./: pyproject.toml
src/petpptx/: app_props.py  appprops.py  builder.py  constants.py  contet_type.py  core_props.py  coreprops.py  mixin_handler.py  presentation.py  relationship.py  slide.py
src/petpptx/handler/: xml_handler.py
src/petpptx/pkg/: __init__.py  file_handler.py
src/petpptx/schemas/: base_schema.py  core_properties.py  presentation.py  presentation_pr.py  properties.py  relationships.py  sld.py  sld_layout.py  sld_master.py  tbl_style_lst.py  theme.py  types.py  view_pr.py
tests/: test_presentation.py  test_read.py
