[project]
name = "petpptx"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Sergei Malygin", email = "sedrew2010@gmail.com"},
]
dependencies = [
    "lxml>=5.2.1",
]

#requires-python = ">=3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "xsdata[cli]>=24.4",
]
